Removed private ninchat_colorDisabled color Update default ninchat_color_text_disabled value according to artboard

--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -4,7 +4,6 @@
     <color name="ninchat_colorPrimary">#242424</color>
     <color name="ninchat_colorPrimaryDark">#0D2230</color>
     <color name="ninchat_colorAccent">#008aff</color>
-    <color name="ninchat_colorDisabled">#F8F8F8</color>
 
     <color name="ninchat_activity_top_matter_background">@android:color/white</color>
     <color name="ninchat_activity_bottom_matter_background">#e9e9e9</color>
@@ -21,7 +20,7 @@
     <color name="ninchat_color_background_bottom">@color/ninchat_activity_bottom_matter_background</color>
     <color name="ninchat_color_text_bottom">@color/ninchat_colorPrimary</color>
     <color name="ninchat_color_text_normal">@color/ninchat_colorPrimary</color>
-    <color name="ninchat_color_text_disabled">@color/ninchat_colorDisabled</color>
+    <color name="ninchat_color_text_disabled">#B8B8B8</color>
 
     <color name="ninchat_color_error_background">#983637</color>
 
