--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -101,5 +101,6 @@
     <dimen name="ninchat_questionnaire_items_margin_right">15dp</dimen>
     <dimen name="ninchat_questionnaire_item_label_text_size">20sp</dimen>
     <dimen name="ninchat_questionnaire_item_dropdown_height">40dp</dimen>
+    <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
 
 </resources>
