--- a/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:focusableInTouchMode ="true"
     android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom">
 
     <TextView
