--- a/ninchatsdk/src/main/res/layout/text_field_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_field_with_label.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusableInTouchMode="true"
     android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom"
     android:orientation="vertical">
 
