Improve scrolling performance  - Removed redundant rendering

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
@@ -14,7 +14,7 @@
         android:background="@android:color/transparent"
         android:id="@+id/questionnaire_form_rview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:overScrollMode="never"
         tools:itemCount="5"/>
 </RelativeLayout>
