--- a/ninchatsdk/src/main/res/layout/text_view.xml
+++ b/ninchatsdk/src/main/res/layout/text_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/text_view_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
