--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_questionnaire_background.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_questionnaire_background.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="top|left"><!-- android:gravity="top|left" android:drawable="@drawable/ninchat_chat_bubble_left_caret">-->
-        <bitmap android:src="@drawable/ninchat_chat_bubble_left_caret"
-            android:gravity="center" />
+    <item
+        android:id="@+id/ninchat_top_icon"
+        android:gravity="top|left">
+        <bitmap
+            android:gravity="end"
+            android:src="@drawable/ninchat_chat_bubble_left_caret" />
     </item>
-    <item android:top="7dp">
+    <item
+        android:id="@+id/ninchat_middle"
+        android:top="7dp">
         <shape android:shape="rectangle">
             <corners
                 android:radius="@dimen/ninchat_chat_activity_message_bubble_corner_radius"
-                android:topLeftRadius="0dp"
-                />
+                android:topLeftRadius="0dp" />
             <solid android:color="#FFFFFF" />
         </shape>
     </item>
     <item>
-        <shape android:shape="rectangle">
-            <padding android:left="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                android:top="@dimen/ninchat_chat_activity_message_bubble_continued_padding_top"
+        <shape
+            android:id="@+id/ninchat_end"
+            android:shape="rectangle">
+            <padding
                 android:bottom="@dimen/ninchat_chat_activity_message_bubble_padding_vertical"
-                android:right="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal" />
+                android:left="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
+                android:right="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
+                android:top="@dimen/ninchat_chat_activity_message_bubble_continued_padding_top" />
         </shape>
     </item>
 </layer-list>
