Fix sdk crash due to input change on disabled or not focused element

--- a/ninchatsdk/src/main/res/layout/text_area_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_area_with_label.xml
@@ -24,6 +24,8 @@
         android:gravity="top"
         android:inputType="textMultiLine|textCapSentences"
         android:minHeight="80dp"
+        android:selectAllOnFocus="false"
+        android:imeOptions="actionDone"
         android:maxLines="4"
         tools:hint="Enter text" />
 
