--- a/ninchatsdk/src/main/res/layout/text_field_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_field_with_label.xml
@@ -24,6 +24,7 @@
         android:inputType="text|textCapSentences"
         android:minHeight="50dp"
         android:selectAllOnFocus="false"
+        android:imeOptions="actionDone"
         android:singleLine="true"
         tools:hint="Enter text" />
 
