Dropdown menu - Make caret clickable  - Does not fully comply with UI. Require the drop downoption to match parent though

--- a/ninchatsdk/src/main/res/layout/dropdown_list.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_list.xml
@@ -16,6 +16,7 @@
         android:gravity="center"
         android:overlapAnchor="false"
         android:spinnerMode="dropdown"
+        android:dropDownWidth="match_parent"
         android:theme="@style/NinchatTheme.Dropdown.Spinner" />
 
     <ImageView
