--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -110,7 +110,7 @@
 
     <Button
         android:id="@+id/ninchat_chat_close"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/ninchat_close_button_width"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
