--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="ninchat_button_vertical_margin">7dp</dimen>
     <dimen name="ninchat_dialog_button_height">45dp</dimen>
     <dimen name="ninchat_close_button_height">45dp</dimen>
+    <dimen name="ninchat_close_button_width">wrap_content</dimen>
     <dimen name="ninchat_send_button_height">35dp</dimen>
     <dimen name="ninchat_multichoice_button_corner_radius">20dp</dimen>
     <dimen name="ninchat_multichoice_padding">5dp</dimen>
@@ -103,5 +104,10 @@
     <dimen name="ninchat_questionnaire_item_dropdown_height">40dp</dimen>
     <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
     <dimen name="ninchat_questionnaire_checkbox_margin">10dp</dimen>
+
+    <!-- Titlebar -->
+    <dimen name="ninchat_title_bar_height">70dp</dimen>
+    <dimen name="ninchat_title_bar_height_agent_name_margin">15dp</dimen>
+
 
 </resources>
