--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
@@ -19,32 +19,27 @@
         android:id="@+id/ninchat_media_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ninchat_media_activity_top_bar_file_name_margin"
-        android:layout_weight="1"
+        android:layout_weight="0.6"
         android:autoLink="none"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="TitleBar title" />
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
+        android:textColor="@color/ninchat_color_modal_text"
+        android:text="Title bar" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <View
+        android:id="@+id/view_padding"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        android:visibility="invisible" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/ninchat_media_activity_top_bar_button_padding">
-
-            <Button
-                android:id="@+id/ninchat_chat_close"
-                style="@style/NinchatTheme.Button.Close.Chat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="test"
-                android:onClick="onCloseChat" />
-
-        </RelativeLayout>
-    </LinearLayout>
+    <Button
+        android:id="@+id/ninchat_chat_close"
+        style="@style/NinchatTheme.Button.Close.Chat"
+        android:layout_width="@dimen/ninchat_close_button_width"
+        android:layout_height="@dimen/ninchat_close_button_height"
+        android:text="Close"
+        android:onClick="onCloseChat" />
 
 </LinearLayout>
