--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -57,4 +57,6 @@
 
     <color name="ninchat_color_checkbox_selected">@color/ninchat_colorAccent</color>
     <color name="ninchat_color_checkbox_unselected">@color/ninchat_color_hint</color>
+
+    <color name="ninchat_color_titlebar_placeholder">#e9e9e9</color>
 </resources>
