--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
@@ -16,7 +16,6 @@
         android:src="@drawable/ninchat_chat_avatar_left" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/ninchat_chat_titlebar_avatar_text_placeholder"
         style="@style/NinchatTheme.TitlebarPlaceholder"
         android:layout_width="0dp"
@@ -26,19 +25,38 @@
         android:autoLink="none"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/ninchat_color_modal_text" />
+        android:textColor="@color/ninchat_color_modal_text"
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/ninchat_chat_titlebar_avatar_text"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
         android:layout_weight="0.8"
-        android:autoLink="none"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="Agent name placeholder"
-        android:textColor="@color/ninchat_color_modal_text" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/ninchat_chat_titlebar_agent_name"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
+            android:autoLink="none"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Agent name"
+            android:textStyle="normal|bold"
+            android:textColor="@color/ninchat_color_modal_text" />
+
+        <TextView
+            android:id="@+id/ninchat_chat_titlebar_agent_jobtitle"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
+            android:autoLink="none"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Agent job title placeholder"
+            android:textColor="@color/ninchat_color_modal_text" />
+    </LinearLayout>
 
     <View
         android:id="@+id/view_padding"
