--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
 
     <color name="ninchat_color_modal_background">@android:color/white</color>
     <color name="ninchat_color_modal_title_text">@color/ninchat_colorPrimary</color>
+    <color name="ninchat_color_modal_text">#242424</color>
 
     <color name="ninchat_color_rating_positive_text">@color/ninchat_colorPrimary</color>
     <color name="ninchat_color_rating_neutral_text">@color/ninchat_colorPrimary</color>
@@ -56,4 +57,7 @@
 
     <color name="ninchat_color_checkbox_selected">@color/ninchat_colorAccent</color>
     <color name="ninchat_color_checkbox_unselected">@color/ninchat_color_hint</color>
+
+    <color name="ninchat_color_titlebar_placeholder">#E9E9E9</color>
+    <color name="ninchat_color_modal_border">#DBDDE1</color>
 </resources>
