--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
@@ -31,6 +31,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="0.8"
+        android:id="@+id/ninchat_titlebar_agent_info_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -70,7 +71,6 @@
         style="@style/NinchatTheme.Button.Close.Chat"
         android:layout_width="@dimen/ninchat_close_button_width"
         android:layout_height="@dimen/ninchat_close_button_height"
-        android:onClick="onCloseChat"
         android:text="Close" />
 
 </LinearLayout>
