titlebar: for rating view

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
@@ -12,6 +12,7 @@
 
     <include
         android:visibility="gone"
+        tools:visibility="visible"
         android:id="@+id/ninchat_titlebar"
         layout="@layout/ninchat_titlebar"
         android:layout_width="match_parent"
