--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar_with_agent_info.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar_with_agent_info.xml
@@ -25,24 +25,22 @@
             android:id="@+id/ninchat_chat_titlebar_agent_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
             android:autoLink="none"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/ninchat_color_modal_text"
+            android:textColor="@color/ninchat_color_titlebar_text"
             android:textStyle="normal|bold"
-            tools:text="Pallab Gain ( new user name )" />
+            tools:text="User Name" />
 
         <TextView
             android:id="@+id/ninchat_chat_titlebar_agent_jobtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_text_margin"
             android:autoLink="none"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/ninchat_color_modal_text"
-            tools:text="Agent job title placeholder" />
+            android:textColor="@color/ninchat_color_titlebar_text"
+            tools:text="User job title" />
     </LinearLayout>
 
 </LinearLayout>
