--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="ninchat_dialog_button_height">45dp</dimen>
     <dimen name="ninchat_close_button_height">45dp</dimen>
     <dimen name="ninchat_close_button_width">-2dp</dimen>
+    <dimen name="ninchat_titlebar_width">-2dp</dimen>
     <dimen name="ninchat_send_button_height">35dp</dimen>
     <dimen name="ninchat_multichoice_button_corner_radius">20dp</dimen>
     <dimen name="ninchat_multichoice_padding">5dp</dimen>
@@ -105,9 +106,7 @@
     <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
     <dimen name="ninchat_questionnaire_checkbox_margin">10dp</dimen>
 
-    <!-- Titlebar -->
-    <dimen name="ninchat_title_bar_height">-2dp</dimen>
-    <dimen name="ninchat_chat_activity_text_margin">15dp</dimen>
-
-
+    <dimen name="ninchat_titlebar_close_button_width">-2dp</dimen>
+    <dimen name="ninchat_titlebar_close_button_height">-2dp</dimen>
+    <dimen name="ninchat_backlog_chat_close_button_width">-2dp</dimen>
 </resources>
