feature: remove redundant dimen properties

--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -54,8 +54,8 @@
 
     <style name="NinchatTheme.Button.Close.Titlebar" parent="NinchatTheme.Button.Close.Chat">
         <item name="android:maxWidth">350dp</item>
-        <item name="android:layout_height">@dimen/ninchat_titlebar_close_button_height</item>
-        <item name="android:layout_width">@dimen/ninchat_titlebar_close_button_width</item>
+        <item name="android:layout_height">-2dp</item>
+        <item name="android:layout_width">-2dp</item>
     </style>
     <style name="NinchatTheme.Button.Close.Chat.Backlog" parent="NinchatTheme.Button.Close.Chat"/>
 
@@ -69,8 +69,8 @@
     </style>
 
     <style name="NinchatTheme.Button.MultiChoice.Send" parent="NinchatTheme.Button.Send">
-        <item name="android:height">@dimen/ninchat_send_button_height</item>
-        <item name="android:layout_height">@dimen/ninchat_send_button_height</item>
+        <item name="android:height">-2dp</item>
+        <item name="android:layout_height">-2dp</item>
         <item name="android:background">@drawable/ninchat_ui_compose_select_submit</item>
     </style>
 
@@ -118,7 +118,7 @@
         <item name="android:textColor">@color/ninchat_color_radio_item_unselected_text</item>
     </style>
 
-    <style name="NinchatTheme.TitlebarPlaceholder" parent="">
+    <style name="NinchatTheme.TitlebarPlaceholder">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/ninchat_titlebar_text_placeholder</item>
